apps/prod/rbx-commerce-sandbox/rbx-commerce-sandbox-svc.yml
# Service: rbx-commerce-sandbox
apiVersion: v1
kind: Service
metadata:
  name: rbx-commerce-sandbox
  namespace: rbx-commerce-sandbox
  labels:
    app.kubernetes.io/name: rbx-commerce-sandbox
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: rbx-commerce
spec:
  selector:
    app.kubernetes.io/name: rbx-commerce-sandbox
  ports:
    - port: 80
      targetPort: 8080
      name: http
